# ska-sdp-distributed-fourier-transform

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  CHANGELOG.md  CODEOWNERS  CONTRIBUTORS  Dockerfile  Makefile  README.md  dask-report-2d.html  pyproject.toml  requirements.txt
docs/: Makefile  requirements.txt
docs/src/: Makefile  algorithm.rst  api.rst  conf.py  dask.rst  docker.rst  examples.rst  index.rst  scripts.rst  structure.rst
examples/: distributed-ft-astrolab.slurm  distributed-ft-p3.slurm
notebook/: facet-subgrid-impl.ipynb
notebooks/: facet-subgrid-impl.ipynb
scripts/: README.md  demo_api.py  demo_sparse_facet.py  memory_consumption.py  performance_full_steps.py  performance_queue.py  utils.py
slurm_scripts/: run_distr_single_astrolab.slurm  run_distr_single_csd3.slurm  submit_multi_queue_csd3.sh
src/: api.py  api_helper.py  fourier_transform_1d_dask.py  fourier_transform_2d_dask.py  fourier_transform_dask.py  generate_hdf5.py  swift_configs.py  utils.py
src/algorithm_1d/: README.md  fourier_algorithm.py  fourier_transform_1d_dask.py  utils.py
src/fourier_transform/: algorithm_parameters.py  dask_wrapper.py  fourier_algorithm.py  test_algorithm.py  utils.py
src/oned_algorithm/: fourier_algorithm.py  fourier_transform_1d_dask.py  utils.py
src/ska_sdp_exec_swiftly/: __init__.py  api.py  api_helper.py  fourier_transform_dask.py  generate_hdf5.py  swift_configs.py  utils.py
src/ska_sdp_exec_swiftly/fourier_transform/: __init__.py  algorithm_parameters.py  core.py  fourier_algorithm.py
src/tests/: test_integration_fourier_transform.py
tests/: run_swift_configs.py  test_algorithm_parameters.py  test_api.py  test_core.py  test_end_to_end_fourier_transform.py  test_fourier_algorithm.py  test_integration_fourier_transform.py  test_memory.py  test_memory_consumption.py  test_performance_queue.py  test_utils.py
tests/test_data/reference_data/: README.md  ref_data.py  ref_data_2d.py
