[tool.poetry]
name = "ska-sdp-distributed-fourier-transform"
version = "0.0.0"
description = "SKA SDP Distributed Fourier Transform"
authors = ["SKA SDP Developers"]
license = "BSD-3-Clause"
repository = "https://gitlab.com/ska-telescope/sdp/ska-sdp-distributed-fourier-transform"

[[tool.poetry.source]]
name = "ska"
url = "https://artefact.skao.int/repository/pypi-internal/simple"

[tool.poetry.dependencies]
python = "^3.9.5"
bokeh = "^2.4.3"
dask = "^2022.9.0"
distributed = "^2022.9.0"
jupyter = "^1.0.0"
matplotlib = "^3.5.3"
numpy = "^1.23.3"
scipy = {version="^1.9.1", python=">=3.9.5,<3.11"}
h5py = "^3.7.0"
pandas = "^1.4.4"
ska-sdp-func = "^1.0.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.8.0"
flake8 = "^5.0.4"
pylint = "^2.15.2"
pylint-junit = "^0.3.2"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
build = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
