[tool.poetry]
name = "ska-sdp-distributed-fourier-transform"
version = "0.0.0"
description = "SKA SDP Distributed Fourier Transform"
authors = ["SKA SDP Developers"]
license = "BSD-3-Clause"
repository = "https://gitlab.com/ska-telescope/sdp/ska-sdp-distributed-fourier-transform"

[tool.poetry.dependencies]
python = "^3.10"
bokeh = "^3.3.4"
dask = "^2024.2.1"
distributed = "^2024.2.1"
jupyter = "^1.0.0"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
scipy = "^1.12.0"
h5py = "^3.10.0"
pandas = "^2.2.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.1.0"
flake8 = "^7.0.0"
pylint = "^3.0.3"
pylint-junit = "^0.3.4"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
build = "^1.0.3"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2"
sphinx-rtd-theme = "^2.0"
sphinx-argparse = "^0.4"
sphinx_automodapi = "^0.17"

# Additional packages needed to be installed
# so that the docs can render the API correctly
# without the need of mocking every single import
numpy = "^1.26.4"
scipy = "^1.12.0"
h5py = "^3.10.0"
dask = "^2024.2.1"
distributed = "^2024.2.1"
matplotlib = "^3.8.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


